--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+{% load static %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="{% static 'style.css' %}" rel="stylesheet"/>
+  </head>
+  <body>
+  
+    <div class="background">
+      <h1 class="title">Nutrition Label Scanner</h1>
+        {% block form %}
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Nutition Label</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <p>POGGER</p>
-        {% block content %}
-        
         {% endblock %}
-        <script src="" async defer></script>
-    </body>
+    </div>
+  </body>
 </html>
